--- a/pp.html
+++ b/pp.html
@@ -51,7 +51,12 @@
     We may update this Privacy Policy from time to time. Any changes will be posted here with the revised date.
   </p>
 
-  <h2>8. Contact Us</h2>
+  <h2>8. Rewards and Referral Credits</h2>
+<p>
+AI Auto Invoicing may offer referral or promotional credit programs. These credits are not real currency and may only be used within the app to unlock features or receive discounts. Credits have no cash value and cannot be transferred or withdrawn.
+</p>
+
+  <h2>9. Contact Us</h2>
   <p>
     If you have any questions or concerns about this policy, please contact us at:
     <br>
