--- a/pp.html
+++ b/pp.html
@@ -9,7 +9,7 @@
   <p>Last updated: May 9, 2025</p>
 
   <p>
-    <strong>AI Auto Invoicing</strong> is committed to protecting your privacy. This Privacy Policy explains how we handle your information when you use our mobile application.
+    <strong>AI Auto Invoicing</strong> and <strong>Zen Nota</strong> is committed to protecting your privacy. This Privacy Policy explains how we handle your information when you use our mobile application.
   </p>
 
   <h2>1. Information We Collect</h2>
