--- a/public/pp.html
+++ b/public/pp.html
@@ -56,10 +56,10 @@
 
 <body>
     <h1>Privacy Policy</h1>
-    <p><em>Last updated: June 2, 2025</em></p>
+    <p><em>Last updated: July 3, 2025</em></p>
 
     <p>
-        <strong>AI Auto Invoicing</strong> is committed to protecting your privacy. This Privacy Policy explains how we
+        <strong>AI Auto Invoicing</strong> and <strong>Zen Nota</strong> is committed to protecting your privacy. This Privacy Policy explains how we
         collect, use, and safeguard your information when you use our mobile application available on the Google Play
         Store.
     </p>
